# lc0-js

./: .gitignore  .gitmodules  README.md  main.js  makefile  meson.build
src/: bindings.cc  engine.cc  engine.h  main.cc
src/chess/: uciloop.cc  uciloop.h
src/mcts/: node.cc  node.h  search.cc  search.h
src/neural/: factory.cc  loader.cc  loader.h  network_tsjs.cc
src/neural/blas/: blas.c  blas.cc  blas.h  convolution1.cc  fully_connected_layer.cc  lsame.c  sdot.c  sgemm.c  winograd_convolution3.cc
src/utils/: logging.cc
weights/: bundled.txt  makefile
www/: controller.js  emscripten.css  engine.css  engine.html  engine.js  index.html  lc0_loader.js  module.js
